# autoclicker

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  hotkey.rs  keymap.rs  main.rs  settings.rs  worker.rs
