[package]
name = "autoclicker"
version = "1.0.1"
edition = "2024"
license = "MIT"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "ansi"] }

eframe = "0.33.2"

serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
directories = "6.0.0"

enigo = { version = "0.6.1", optional = true }
rand = { version = "0.9.2", optional = true }
rdev = "0.5.3"

[features]
default = ["clicking_enigo"]
clicking_enigo = ["dep:enigo", "dep:rand"]
